sumo/tests/sumo/errors/unknown_config_option/errors.sumo
Error: No option with the name 'blubber' exists.
Error: Could not load configuration 'sumo.sumo.cfg'.
Quitting (on error).
